--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -7,9 +7,9 @@
     "# Universidade Federal da Bahia\n",
     "\n",
     "- *Filipe Fernandes*\n",
-    "- *Fevereiro xx-xx, 2015*\n",
+    "- *Setembro 02-04, 2015*\n",
     "\n",
-    "Esse \u00e9 o material para um curso de Introdu\u00e7\u00e3o \u00e0 linguagem de programa\u00e7\u00e3o Python de 2 dias."
+    "Esse é o material para um curso de Introdução à linguagem de programação Python de 3 dias."
    ]
   },
   {
@@ -19,20 +19,27 @@
     "## Programa\n",
     "\n",
     "### Dia 1\n",
-    " - [Introdu\u00e7\u00e3o](lecture_01.ipynb)\n",
-    " - [Sintaxe e Data Types](lecture_01.ipynb)\n",
-    " - [NumPy Arrays](lecture_01.ipynb)\n",
+    " - [Introdução](00-IntroPython.ipynb)\n",
+    " - [IPython e Jupyter Notebooks](01-Jupyter-Basics.ipynb)\n",
+    " - [NumPy Arrays](02-NumPy.ipynb)\n",
     "\n",
     "### Dia 2\n",
-    " - [Plotando com Matplolib](lecture_02.ipynb)\n",
-    " - [Lendo dados oceanogr\u00e1ficos (netCDF, OPeNDAP, ERDDAP etc)](lecture_02.ipynb)\n",
-    " - [S\u00e9ries temporais com pandas](lecture_02.ipynb)\n"
+    " - [Plotando com Matplolib](03-matplotlib.ipynb)\n",
+    " - [Séries temporais com pandas](04-pandas.ipynb)\n",
+    " - [Dados em Multi-dimensões](05-MultiDimMultiFormatData.ipynb)\n",
+    "\n",
+    "\n",
+    "### Dia 3\n",
+    "- [iris and cartopy](06-iris_cartopy.ipynb)\n",
+    "- [Estudos de caso](07-case_studies.ipynb)\n",
+    "- [Dados fornecidados pelos alunos](08-dados_alunos.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 3)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -46,8 +53,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.4.1"
-  },
-  "signature": "sha256:3d5685642b59570fb1307d377dbed03160f0e6dd109e50e02229251d378fa4d0"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 0
