--- a/notebooks/03-matplotlib.ipynb
+++ b/notebooks/03-matplotlib.ipynb
@@ -21,6 +21,333 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib é um pacote (ou módulo) Python usado pela comunidade científica\n",
+    "para produzir gráficos 2D.  Esse pacote suporta diversos formatos como PNG,\n",
+    "JEPG, PostScript/EPS, PDF e SVG.\n",
+    "\n",
+    "Matplotlib traz um sub-pacote de conveniência chamado `pyplot` que, para manter\n",
+    "a consistência com usuários do matplotlib, deve sempre ser importado como `plt`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O coração de **todos** os gráficos é o objeto *figure*.  O objeto `Figure`\n",
+    "está no pode ser desenhado em qualquer formato de saída ou apenas a tela."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sozinho o objeto `Figure` não é interessante.  Temos que \"desenhar\" algo nele.\n",
+    "\n",
+    "Os objetos de desenho do matplotlib são chamados de `Artists`.  De longe o\n",
+    "`Artists` mais útil é o `Axes` *artist*.  O `Axes` *artist* representa o\n",
+    "espaço dos dados (*x*, *y*) ou em caso de coordenadas polares (*r*, $\\theta$).\n",
+    "\n",
+    "Não há limite no número de `Artists` que podemos adicionar em uma figura.\n",
+    "Vamos ver um exemplo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ax = plt.axes()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A maior parte do tempo você vai trabalhar com o objeto `Axes`.  A documentação\n",
+    "é bem detalhada e recomendo a leitura, principalmente do método `plot`:\n",
+    "\n",
+    " * http://matplotlib.org/api/pyplot_summary.html\n",
+    " * http://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.plot\n",
+    " * http://matplotlib.org/api/axes_api.html?#matplotlib.axes.Axes.plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ax = plt.axes()\n",
+    "\n",
+    "line1 = ax.plot([0, 1, 2, 1.5], [3, 1, 2, 4])\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outros tipos de gráficos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-180, 180, 60)\n",
+    "y = np.linspace(-90, 90, 30)\n",
+    "x2d, y2d = np.meshgrid(x, y)\n",
+    "\n",
+    "data = np.cos(3 * np.deg2rad(x2d)) + np.sin(2 * np.deg2rad(y2d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.contourf(x, y, data)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(data, extent=[-180, 180, -90, 90], interpolation='nearest', origin='lower')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(x, y, data)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.scatter(x2d, y2d, c=data, s=15)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.bar(x, data.sum(axis=0), width=np.diff(x)[0])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(x, data.sum(axis=0),\n",
+    "         linestyle='--',\n",
+    "         marker='d',\n",
+    "         markersize=10,\n",
+    "         color='red')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Títulos, Legendas, colorbars e anotações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = plt.axes()\n",
+    "# Adjust the created axes so that its topmost extent is 0.8 of the figure.\n",
+    "fig.subplots_adjust(top=0.8)\n",
+    "\n",
+    "fig.suptitle(u'Título do \"Figure\"', fontsize=18, fontweight='bold')\n",
+    "ax.set_title(u'Título do \"Axes', fontsize=16)\n",
+    "\n",
+    "ax.set_xlabel('O Eixo X')\n",
+    "ax.set_ylabel('O Eixo Y $y=f(x)$', fontsize=16)\n",
+    "\n",
+    "ax.text(0.5, 0.5, 'Texto centrado em (0.5, 0.5)\\nin data coordinates.',\n",
+    "        horizontalalignment='center', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-3, 7, 200)\n",
+    "\n",
+    "plt.plot(x, 0.5*x**3 - 3*x**2, linewidth=2,\n",
+    "         label='$f(x)=0.5x^2-3x^2$')\n",
+    "\n",
+    "plt.plot(x, 1.5*x**2 - 6*x, linewidth=2, linestyle='--',\n",
+    "         label='Gradiente de $f(x)$', )\n",
+    "\n",
+    "plt.legend(loc='lower right')\n",
+    "\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-180, 180, 60)\n",
+    "y = np.linspace(-90, 90, 30)\n",
+    "x2d, y2d = np.meshgrid(x, y)\n",
+    "data = np.cos(3 * np.deg2rad(x2d)) + np.sin(2 * np.deg2rad(y2d))\n",
+    "\n",
+    "plt.contourf(x, y, data)\n",
+    "\n",
+    "plt.colorbar(orientation='horizontal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-3, 7, 200)\n",
+    "plt.plot(x, 0.5*x**3 - 3*x**2, linewidth=2)\n",
+    "plt.annotate('Local minimum',\n",
+    "             xy=(4, -18),\n",
+    "             xytext=(-2, -40), fontsize=15,\n",
+    "             arrowprops={'facecolor': 'black', 'frac': 0.3})\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(range(10))\n",
+    "\n",
+    "plt.savefig('simple.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import SVG\n",
+    "\n",
+    "SVG('./simple.svg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo com dados reais"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -34,19 +361,6 @@
     "data = np.loadtxt(\"./data/dados_pirata.csv\", skiprows=1, usecols=range(2, 16), delimiter=',')\n",
     "\n",
     "data = ma.masked_less_equal(data, -9999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -375,139 +689,6 @@
     "from IPython.display import IFrame\n",
     "\n",
     "IFrame(\"http://matplotlib.org/gallery.html\", width=900, height=700)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cartopy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "kw = dict(color='#FF9900', linestyle='-', linewidth=1.5)\n",
-    "lon, lat = np.loadtxt('./data/challenger_path.csv',\n",
-    "                      delimiter=',', unpack=True)\n",
-    "\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "\n",
-    "def make_cartopy(projection=ccrs.Robinson(), figsize=(6, 4), resolution='110m'):\n",
-    "    fig, ax = plt.subplots(figsize=figsize, subplot_kw=dict(projection=projection))\n",
-    "    ax.set_global()\n",
-    "    ax.coastlines(resolution=resolution, color='k')\n",
-    "    # Only PlateCarree and Mercator plots are currently supported.\n",
-    "    gl = ax.gridlines(draw_labels=False)\n",
-    "    ax.add_feature(cfeature.LAND, facecolor='0.75')\n",
-    "    return fig, ax\n",
-    "\n",
-    "fig, ax = make_cartopy(projection=ccrs.Robinson(), resolution='110m')\n",
-    "_ = ax.plot(lon, lat, transform=ccrs.Geodetic(), **kw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import cartopy.io.img_tiles as cimgt\n",
-    "\n",
-    "\n",
-    "def request_map(map_request, figsize=(8, 8), zoom=8):\n",
-    "    fig, ax = plt.subplots(figsize=figsize,\n",
-    "                           subplot_kw=dict(projection=map_request.crs))\n",
-    "    ax.set_extent([-39, -38.25, -13.25, -12.5])\n",
-    "    ax.add_image(map_request, zoom)\n",
-    "    return fig, ax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = request_map(cimgt.MapQuestOpenAerial(), zoom=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = request_map(cimgt.GoogleTiles(), zoom=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = request_map(cimgt.OSM(), zoom=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = request_map(cimgt.QuadtreeTiles(), zoom=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.pyplot as plt\n",
-    "from cartopy.feature import NaturalEarthFeature, LAND, COASTLINE\n",
-    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
-    "\n",
-    "\n",
-    "def brazil_states(projection=ccrs.PlateCarree()):\n",
-    "    fig, ax = plt.subplots(figsize=(8, 6), subplot_kw=dict(projection=projection))\n",
-    "    ax.set_extent([-82, -32, -45, 10])\n",
-    "    ax.stock_img()\n",
-    "    ax.add_feature(LAND)\n",
-    "    ax.add_feature(COASTLINE)\n",
-    "    gl = ax.gridlines(draw_labels=True)\n",
-    "    gl.xlabels_top = False\n",
-    "    gl.ylabels_right = False\n",
-    "    gl.xformatter = LONGITUDE_FORMATTER\n",
-    "    gl.yformatter = LATITUDE_FORMATTER\n",
-    "    return fig, ax\n",
-    "\n",
-    "\n",
-    "fig, ax = brazil_states()\n",
-    "states = NaturalEarthFeature(category='cultural', scale='50m', facecolor='none',\n",
-    "                             name='admin_1_states_provinces_shp')\n",
-    "_ = ax.add_feature(states, edgecolor='gray')"
    ]
   }
  ],
