--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -32,13 +32,13 @@
     "### Dia 3\n",
     "- [iris and cartopy](06-iris_cartopy.ipynb)\n",
     "- [Estudos de caso](07-case_studies.ipynb)\n",
-    "- [Dados fornecidados pelos alunos](08-dados_alunos.ipynb)"
+    "- [Dados fornecidos pelos alunos](08-dados_alunos.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "IPython (Python 3)",
    "language": "python",
    "name": "python3"
   },
